public/css/palabras.css
body {
  background-color: #ccc;
  background: url('../img/irongrip.png');
}

header {
  padding: 20px;
}

#app {
  width: 980px;
  min-height: 900px;
  margin: 10px auto;
  background-color: white;
  border: 1px solid #ccc;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.05);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
}

#language-selector {
  margin-top: 20px;
  text-align: right;
}

#language-selector .btn-group {
    margin: 0 auto; 
    text-align: left;
    width: inherit;
    display: inline-block;
}

#question {
  display: inline-block;
  font-size: 24px;
  width: 210px;
  vertical-align: middle;
}

tr.mistake {
  background-color: #ffeeee;
}

td.actions {
  white-space: nowrap;
}

